--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,278 +1,1 @@
-# > Surge Config Make by Coldvvater
-# > TG Channel: https://t.me/Ison_Channel
-# > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.26
-
-[General]
-# > 增强版 Wi-Fi 助理
-# >在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启，默认关闭：false,开启把false修改为true即可。
-wifi-assist = false
-# > 混合网络 Hybrid Network（建议关闭、无限流量或者超出套餐流量不限速可选择开启）
-all-hybrid = false
-
-# > Internet 测试 URL
-internet-test-url = http://www.aliyun.com
-# > 代理测速 URL
-proxy-test-url = http://cp.cloudflare.com/generate_204
-# > 测试超时（秒）
-test-timeout = 5
-
-# > 自定义 GeoIP 数据库
-geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
-# > GeoIP 禁用自动更新
-disable-geoip-db-auto-update = false
-
-# > IPv6 支持（默认关闭）
-ipv6 = false
-
-# > 允许 Wi-Fi 访问 (仅 iOS ）
-allow-wifi-access = true
-wifi-access-http-port = 6152
-wifi-access-socks5-port = 6153
-# > 允许个人热点访问
-allow-hotspot-access = true
-# > Wi-Fi 不是主接口则使用SSID组的默认策略
-use-default-policy-if-wifi-not-primary = false
-
-# > 兼容模式 (仅 iOS)
-# compatibility-mode = false
-# > 跳过代理
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, sequoia.apple.com
-
-# > 路由防火墙
-# > 包含所有网络请求
-include-all-networks = false
-# > 包含本地网络请求
-include-local-networks = false
-
-# > 日志等级
-loglevel = notify
-
-# > 当遇到 REJECT 策略时返回错误页
-show-error-page-for-reject = true
-
-# > 返回真实IP Hosts
-always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
-
-# > VIF Excluded Routes
-# Surge VIF 只能处理 TCP 和 UDP 协议。使用此选项可以绕过特定的 IP 范围，允许所有流量通过。
-# tun-excluded-routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 239.255.255.250/32
-# > VIF Included Routes
-# 默认情况下，Surge VIF 接口会声明自己是默认路由。但是，由于 Wi-Fi 接口的路由较小，有些流量可能不会通过 Surge VIF 接口。使用此选项可以添加一条较小的路由。
-# tun-included-routes = 192.168.1.12/32
-
-# > 排除简单主机名
-exclude-simple-hostnames = true
-
-# > DNS 服务器
-dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
-# > 加密的DNS服务器
-encrypted-dns-server = https://cn-south.iqiqzz.com/dns-query,https://cn-east.iqiqzz.com/dns-query
-# > Hijack DNS
-hijack-dns = 8.8.8.8:53, 8.8.4.4:53
-# > 关闭 DOH 的服务端证书验证
-doh-skip-cert-verification=true
-# > etc/hosts 读取 DNS 记录
-read-etc-hosts = true
-
-# > 代理请求本地DNS映射
-use-local-host-item-for-proxy = false
-
-# > UDP IP 防泄漏
-# > 如果没有代理服务器支持 UDP 转发，可修改为「direct」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
-udp-policy-not-supported-behaviour = REJECT
-
-# > 提高处理 UDP 流量优先级            
-# udp-priority = true
-
-# > 切换网络后不再重新进行 VPN 配置
-# fast-switch = true
-
-# > 隐藏 VPN 图标
-hide-vpn-icon = false
-
-# > HTTP-API
-# > 依次为：密码，主机名，端口(xxxxxx改成你自定义的密码）
-http-api = xxxxxx@0.0.0.0:6170
-# > HTTP-API-TLS
-http-api-tls = false
-# > Web控制器
-# > Safari输入127.0.0.1:6171,填入HTTP-API密码即可。
-http-api-web-dashboard = true
-
-[Replica]
-# > 隐藏 Apple 请求
-hide-apple-request = false
-# > 隐藏崩溃追踪器请求
-hide-crash-reporter-request = true
-# > 隐藏 UDP 会话
-hide-udp = false
-# > 关键词过滤器
-keyword-filter-type = false
-# > 关键词
-# keyword-filter = (null)
-
-[Proxy Group]
-# > 策略组
-# > 漏网之鱼
-Final = select, Proxy, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
-# > 节点选择
-Proxy = select, Auto,Fallback,Others,no-alert=0, hidden=0, include-all-proxies=0
-# > 自动筛选
-Auto = url-test, policy-path=此处填入订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
-# > 故障转移
-Fallback = fallback, policy-path=此处填入订阅链接, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, 
-# > 国外网站
-Global = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
-# > 国内网站
-Mainland = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
-# > 哔哩哔哩
-BiliBili = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
-# > 声田音乐
-Spotify = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
-# > 海外抖音
-TikTok = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
-# > 国际媒体
-Streaming = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
-# > 电报信息
-Telegram = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
-# > 苹果服务
-Apple = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
-# > 微软服务
-Microsoft = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
-
-# > 香港节点
-HongKong = select, policy-path=此处填入订阅链接, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
-# > 台湾节点
-TaiWan = select, policy-path=此处填入订阅链接, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
-# > 狮城节点
-Singapore = select, policy-path=此处填入订阅链接, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
-# > 日本节点
-Japan = select, policy-path=此处填入订阅链接, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
-# > 美国节点
-America = select, policy-path=此处填入订阅链接, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
-# > 其他节点
-Others = select, DIRECT, policy-path=此处填入订阅链接, policy-regex-filter=.*,interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
-
-[Rule]
-# > Local Area Network 局域网指定分流
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
-
-# > OpenAI
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list,America
-
-# > 哔哩哔哩东南亚
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBiliIntl/BiliBiliIntl.list,Global
-
-# > 哔哩哔哩
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,BiliBili
-
-# > Spotify
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Spotify/Spotify.list,Spotify
-
-# > TikTok
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,TikTok
-
-# > 国际媒体
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list,Streaming
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list,Streaming
-
-# > Telegram
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram
-
-# > Testfilght
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
-
-# > 苹果服务
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list,Apple
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,Apple
-
-# > 微软服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft
-
-# > 国内网站
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list,Mainland
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax.list,Mainland
-
-# > 国外网站
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,Global
-
-# > 防止应用循环请求
-IP-CIDR,0.0.0.0/32,REJECT,no-resolve
-
-# > GeoIP China
-GEOIP,CN,DIRECT
-
-# > DNS 查询失败走 Final 规则
-FINAL,Final,dns-failed
-
-[Host]
-# > 域名指定 DNS 映射
-*.tw = server:1.1.1.1
-localhost = 127.0.0.1
-# IPv6
-ip6-localhost = ::1
-ip6-loopback = ::1
-# > Firebase Cloud Messaging
-mtalk.google.com = 108.177.125.188
-# > Google Dl
-dl.google.com = server:119.29.29.29
-dl.l.google.com = server:119.29.29.29
-update.googleapis.com = server:119.29.29.29
-# > Apple
-apple.com = server:223.5.5.5
-*icloud.com = server:223.5.5.5
-*icloud.com.cn = server:223.5.5.5
-*testflight.apple.com = server:8.8.4.4
-# > Alibaba
-*.alicdn.com = server:223.5.5.5
-aliyun.com = server:223.5.5.5
-*.aliyun.com = server:223.5.5.5
-taobao.com = server:223.6.6.6
-*.taobao.com = server:223.6.6.6
-tmall.com = server:223.6.6.6
-*.tmall.com = server:223.6.6.6
-# > JD
-jd.com = server:119.29.29.29
-*.jd.com = server:119.28.28.28
-# > Tencent
-*.qq.com = server:119.28.28.28
-*.tencent.com = server:119.28.28.28
-weixin.com = server:119.28.28.28
-*.weixin.com = server:119.28.28.28
-# > bilibili
-bilibili.com = server:119.29.29.29
-*.bilibili.com = server:119.29.29.29
-hdslb.com = server:119.29.29.29
-# > NetEase
-163.com = server:119.29.29.29
-*.163.com = server:119.29.29.29
-126.com = server:119.29.29.29
-*.126.com = server:119.29.29.29
-*.126.net = server:119.29.29.29
-*.127.net = server:119.29.29.29
-*.netease.com = server:119.29.29.29
-# > xiaomi
-mi.com = server:119.29.29.29
-*.mi.com = server:119.29.29.29
-xiaomi.com = server:119.29.29.29
-*.xiaomi.com = server:119.29.29.29
-# > Baidu
-*.baidu.com = server:119.29.29.29
-*.bdstatic.com = server:119.29.29.29
-# > Others
-*.unicompayment.com = server:119.29.29.29
-*.ximalaya.com = server:119.29.29.29
-*.vercel.app = server:119.29.29.29
-*.vercel.com = server:119.29.29.29
-# > Local Area Network
-*.lan = server:syslib
-
-[MITM]
-# > VIF 对原始 TCP 流量进行解密
-tcp-connection = true
-# > 跳过服务端证书验证
-skip-server-cert-verify = true
-# > MITM 使用 HTTP/2 协议
-h2 = true
+待调整...
