增加SSID策略组

--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.29
+# > Update Date: 2023.04.30
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -121,41 +121,45 @@ keyword-filter-type = false
 # > 漏网之鱼
 Final = select, Proxy, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 # > 节点切换
-Proxy = select, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0, include-all-proxies=0
+Proxy = select, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0, include-all-proxies=0
 # > 自动选择
-AutoTest = url-test, policy-path=此处填写订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
+AutoSelect = url-test, policy-path=此处填写订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
 Fallback = fallback, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, include-other-group="AutoTest"
+# > SSID策略
+SSIDPolicy = subnet, default = Fallback, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
 # > 国外网站
-Global = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Global = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国内网站
-Domestic = select, DIRECT, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Domestic = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 油管视频
-YouTube = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+YouTube = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 奈飞视频
-NETFLIX = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+NETFLIX = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 迪士尼+
-Disney+ = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Disney+ = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > Emby
-Emby = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Emby = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 哔哩哔哩
 BiliBili = select, DIRECT, HongKong, TaiWan, Others, no-alert=0, hidden=0
 # > 声田音乐
-Spotify = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Spotify = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 网易云音乐
-NetEaseMusic = select, DIRECT, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+NetEaseMusic = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 海外抖音
-TikTok = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+TikTok = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国际媒体
-Streaming = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Streaming = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 电报信息
-Telegram = select, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Telegram = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 苹果服务
-Apple = select, DIRECT, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Apple = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+# > 谷歌服务
+Google = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 微软服务
-Microsoft = select, DIRECT, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Microsoft = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 游戏平台
-Games = select, DIRECT, Proxy, AutoTest, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Games = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 广告拦截
 AdBlock = select, REJECT, DIRECT, no-alert=0, hidden=0
 # > 香港节点
@@ -212,7 +216,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list,Apple
 
 # > 谷歌服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,Global
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,Google
 
 # > 微软服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft
@@ -221,7 +225,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
 
 # > 国内网站
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China_Domain.list,Domestic
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list,Domestic
 
 # > 国外网站
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
