--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -121,7 +121,7 @@ keyword-filter-type = false
 # > 漏网之鱼
 Final = select, Proxy, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 # > 节点切换
-Proxy = select, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0, include-all-proxies=0
+Proxy = select, AutoSelect, Fallback, SSIDPolicy, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0, include-all-proxies=0
 # > 自动选择
 AutoSelect = url-test, policy-path=此处填写订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
