--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -3,6 +3,11 @@
 # > GitHub: https://github.com/Coldvvater
 # > Update Date: 2023.04.30
 
+############################################################################
+# > 新增的SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
+# > 可自行修改为自己家里的WiFi名称。
+############################################################################
+
 [General]
 # > 增强版 Wi-Fi 助理
 # 在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启，默认关闭：false,开启把false修改为true即可。
