--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -130,7 +130,7 @@ Proxy = select, AutoSelect, Fallback, SSIDPolicy, HongKong, TaiWan, Singapore, J
 # > 自动选择
 AutoSelect = url-test, policy-path=此处填写订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
-Fallback = fallback, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, include-other-group="AutoTest"
+Fallback = fallback, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, include-other-group="AutoSelect"
 # > SSID策略
 SSIDPolicy = subnet, default = Fallback, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
 # > 国外网站
@@ -168,17 +168,17 @@ Games = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore
 # > 广告拦截
 AdBlock = select, REJECT, DIRECT, no-alert=0, hidden=0
 # > 香港节点
-HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoTest"
+HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 # > 台湾节点
-TaiWan = select, ppolicy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoTest"
+TaiWan = select, ppolicy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 # > 狮城节点
-Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoTest"
+Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 # > 日本节点
-Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoTest"
+Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 # > 美国节点
-America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoTest"
+America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 # > 其他节点
-Others = select, DIRECT, policy-regex-filter=.*, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoTest"
+Others = select, DIRECT, policy-regex-filter=.*, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 
 [Rule]
 # > 规则修正
