--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -170,7 +170,7 @@ AdBlock = select, REJECT, DIRECT, no-alert=0, hidden=0
 # > 香港节点
 HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 # > 台湾节点
-TaiWan = select, ppolicy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
+TaiWan = select, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 # > 狮城节点
 Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
 # > 日本节点
