--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.30
+# > Update Date: 2023.05.01
 
 ############################################################################
 # > 新增的SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -132,7 +132,7 @@ AutoSelect = url-test, policy-path=此处填写订阅链接, url=http://cp.cloud
 # > 故障转移
 Fallback = fallback, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, include-other-group="AutoSelect"
 # > SSID策略
-SSIDPolicy = subnet, default = Fallback, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
+SSIDPolicy = subnet, default = AutoSelect, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
 # > 国外网站
 Global = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国内网站
