Update and rename Loon-Evolve.conf to Loon-Lite.conf

--- a/Loon/Config/Loon-Lite.conf
+++ b/Loon/Config/Loon-Lite.conf
@@ -1,13 +1,11 @@
 # > Loon Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.08
-
-# > 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+# > Update Date: 2023.05.01
 
 [General]
 # > IPv6 支持
-ipv6 = false
+ipv6 = true
 
 # > 跳过某个域名或者IP段
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, www.baidu.com, yunbusiness.ccb.com
@@ -22,7 +20,7 @@ real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xb
 dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
 
 # > DoH加密DNS服务器
-#doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+#doh-server = https://223.5.5.5/dns-query, https://1.12.12.12/dns-query
 
 # > Wi-Fi 访问
 # > 允许 Wi-Fi 网络下其它设备访问
@@ -38,6 +36,9 @@ test-timeout = 5
 
 # > 解析器
 resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
+
+# > GEOIP数据库
+geoip-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 # ssid-trigger参数，用于指定SSID下流量模式切换，（default表示默认，cellular表示蜂窝，目前支持三种值：rule，direct，proxy） 
 # ssid-trigger="default":rule,"cellular":rule,"ASUS":direct,"TPLINK":proxy 
@@ -203,8 +204,10 @@ https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list, polic
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
 # > 国内网站分流
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=Domestic, tag=Domestic, enabled=true
-# > ASN China
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=IP-ASN, enabled=false
+# > LAN
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_LAN, policy=DIRECT, tag=LAN, enabled=true
+# > GEOIP CN
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_REGION, policy=DIRECT, tag=GEOIP CN, enabled=true
 
 # > 本地规则
 [Rule]
@@ -212,25 +215,6 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 # > Type:DOMAIN-SUFFIX,DOMAIN,DOMAIN-KEYWORD,USER-AGENT,URL-REGEX,IP-CIDR
 # > Strategy:DIRECT,Proxy,REJECT
 # > Options:no-resolve(no-resolve(only for cidr))
-DOMAIN-SUFFIX,local,DIRECT
-IP-CIDR,0.0.0.0/8,no-resolve
-IP-CIDR,10.0.0.0/8,no-resolve
-IP-CIDR,100.64.0.0/10,no-resolve
-IP-CIDR,127.0.0.0/8,no-resolve
-IP-CIDR,169.254.0.0/16,no-resolve
-IP-CIDR,172.16.0.0/12,no-resolve
-IP-CIDR,192.0.0.0/24,no-resolve
-IP-CIDR,192.0.2.0/24,no-resolve
-IP-CIDR,192.168.0.0/16,no-resolve
-IP-CIDR,192.88.99.0/24,no-resolve
-IP-CIDR,198.18.0.0/15,no-resolve
-IP-CIDR,198.51.100.0/24,no-resolve
-IP-CIDR,203.0.113.0/24,no-resolve
-IP-CIDR,224.0.0.0/3,no-resolve
-IP-CIDR6,::1/128,no-resolve
-IP-CIDR6,fc00::/7,no-resolve
-IP-CIDR6,fe80::/10,no-resolve
-GEOIP,CN,DIRECT
 FINAL,Final
 
 # > 重写规则
