Update and rename QuantumultX-Evolve.conf to QuantumultX-Lite.conf

--- a/QuantumultX/Config/QuantumultX-Lite.conf
+++ b/QuantumultX/Config/QuantumultX-Lite.conf
@@ -1,7 +1,7 @@
 # > QuantumultX Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.08
+# > Update Date: 2023.05.01
 
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
@@ -19,7 +19,7 @@ resource_parser_url= https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scr
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/Orz-3/Orz-3/master/QuantumultX/IP.js
 
 # > iCloud同步配置文件图标
-;profile_img_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
+profile_img_url= https://gitlab.com/lodepuly/iconlibrary/-/raw/master/App_icon/144px/Quantumult_X.png
 
 # > 根据网络自动切换 分流/直连/全局代理 等模式
 ;running_mode_trigger=filter, filter, asus-5g:all_direct, asus: all_proxy
@@ -104,7 +104,7 @@ server=/*.vercel.app/119.29.29.29
 # > 启用 DoH3 (DNS over HTTP/3)
 ;prefer-doh3
 # > DoH加密DNS服务器
-;doh-server=https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+doh-server=https://223.5.5.5/dns-query, https://1.12.12.12/dns-query
 
 # > 策略组
 [policy]
