--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -3,11 +3,6 @@
 # > GitHub: https://github.com/Coldvvater
 # > Update Date: 2023.05.01
 
-###################################################################
-# > SSID策略组里 “Coldvvater_5G” 为WiFi的SSID名称示例，
-# > 可自行修改为自己家里的WiFi名称。
-###################################################################
-
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
 [general]
@@ -47,9 +42,9 @@ no-system
 # > 禁用IPV6
 no-ipv6
 # > DNS服务器
-server=223.5.5.5, excluded_ssids = Coldvvater_5G
-server=119.29.29.29, excluded_ssids = Coldvvater_5G
-server=114.114.114.114, excluded_ssids = Coldvvater_5G
+server=223.5.5.5
+server=119.29.29.29
+server=114.114.114.114
 # > 域名指定 DNS 映射
 server=/*.tw/1.1.1.1
 # > Firebase Cloud Messaging
@@ -108,7 +103,7 @@ server=/*.vercel.app/119.29.29.29
 # > 启用 DoH3 (DNS over HTTP/3)
 ;prefer-doh3
 # > DoH加密DNS服务器
-doh-server=https://223.5.5.5/dns-query, https://1.12.12.12/dns-query, excluded_ssids = Coldvvater_5G
+doh-server=https://223.5.5.5/dns-query, https://1.12.12.12/dns-query
 
 # > 本地服务器
 [server_local]
@@ -126,8 +121,6 @@ static=Select, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America
 url-latency-benchmark= AutoSelect, server-tag-regex=.*, check-interval=600, tolerance=50, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png
 # > 故障转移
 available=Fallback, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png
-# > SSID策略
-ssid = SSIDPolicy, AutoSelect, Coldvvater_5G:DIRECT, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/SSID.png
 # > 国外网站
 static=Global, Select, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
 # > 国内网站
@@ -174,9 +167,6 @@ static=Japan, server-tag-regex=(?i)(日|🇯🇵|JP|东京|Japan), img-url=https
 static=America, server-tag-regex=(?i)(美|🇺🇲|US|States|American), img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/United_States.png
 # > 其他节点
 static=Others, direct, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Airport.png
-
-# > 远程订阅服务
-[server_remote]
 
 # > 远程规则分流
 [filter_remote]
