--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -77,7 +77,7 @@ exclude-simple-hostnames = true
 # > DNS 服务器
 dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
 # > 加密的DNS服务器(如无必要不建议使用)
-# encrypted-dns-server = https://cn-south.iqiqzz.com/dns-query,https://cn-east.iqiqzz.com/dns-query
+# encrypted-dns-server = https://223.5.5.5/dns-query, https://1.12.12.12/dns-query
 # > Hijack DNS
 hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > 关闭 DOH 的服务端证书验证
