--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -128,7 +128,7 @@ xiaomi.com = server:119.29.29.29
 # > 漏网之鱼
 Final = select,Proxy,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png
 # > 节点切换
-Proxy = select,Auto,Fallback,SSIDPolicy,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Rocket.png
+Proxy = select,AutoSelect,Fallback,SSIDPolicy,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Rocket.png
 # > 自动选择
 AutoSelect = url-test,url = http://cp.cloudflare.com/generate_204,interval = 300,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png
 # > 故障转移
