--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -166,7 +166,7 @@ Google = select,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Japan,Singapore,Americ
 # > 微软服务
 Microsoft = select,DIRECT,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Microsoft.png
 # > 游戏平台
-Games = select,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Game.png
+Games = select, DIRECT,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Game.png
 # > 广告拦截
 AdBlock = select,REJECT,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Advertising.png
 # > 香港节点
