--- a/Shadowrocket/Config/Shadowrocket-Lite.conf
+++ b/Shadowrocket/Config/Shadowrocket-Lite.conf
@@ -64,9 +64,9 @@ Fallback = fallback,url=http://cp.cloudflare.com/generate_204,interval=600,toler
 # > 国外网站
 Foreign = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,,Others,DIRECT,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 国内网站
-Domestic = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,,Others,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
+Domestic = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 哔哩哔哩
-BiliBili = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,,Others,interval=600,timeout=5,select=0,url=http://cp.cloudflare.com/generate_204
+BiliBili = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,interval=600,timeout=5,select=0,url=http://cp.cloudflare.com/generate_204
 # > 声田音乐
 Spotify = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 海外抖音
