--- a/Shadowrocket/Config/Shadowrocket-Evolve.conf
+++ b/Shadowrocket/Config/Shadowrocket-Evolve.conf
@@ -54,7 +54,7 @@ update-url = https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Shadow
 # > 策略组
 [Proxy Group]
 # > 漏网之鱼
-Final = select,Proxy,interval=86400,timeout=5,select=0,url=http://cp.cloudflare.com/generate_204
+Final = select,Proxy, DIRECT, interval=86400,timeout=5,select=0,url=http://cp.cloudflare.com/generate_204
 # > 节点切换
 Proxy = select,AutoSelect,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 自动选择
