--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -1,7 +1,7 @@
 # > Stash Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.28
+# > Update Date: 2023.05.02
 
 # > 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -70,23 +70,21 @@ dns:
     - '*.mcdn.bilivideo.cn'
   nameserver:
 # > 默认DNS服务器，支持udp/tcp/dot/doh/doq
-    - https://doh.pub/dns-query
-    - https://dns.alidns.com/dns-query
+    - https://223.5.5.5/dns-query
+    - https://1.12.12.12/dns-query
 
 p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300}}
 # > 代理提供商锚点
 
-f: &f {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
+g: &g {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
 # > 策略组锚点
 
 d: &d {type: select, proxies: [DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others]}
 
 proxies: # > 本地服务器
 
-u: &u # 订阅引用锚点
-  type: select
-  use:
-  - subs
+u: &u {type: select, use: [Subs]}
+# > 订阅引用锚点
 
 proxy-providers: # > 代理提供商(远程订阅)
   subs:
@@ -98,116 +96,102 @@ proxy-providers: # > 代理提供商(远程订阅)
 
 proxy-groups: # > 策略组
 
-  - name: Final # > 漏网之鱼
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png
-    <<: *f
-    proxies:
-      - Proxy
-      - DIRECT
+# > 漏网之鱼
+- {name: Final, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png, <<: *g, proxies: [Proxy,DIRECT]}
 
-  - name: Proxy # > 节点选择
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Rocket.png
-    <<: *f
-    proxies:
-      - Auto
-      - Fallback
-      - Others
+# > 节点选择
+- {name: Proxy, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Rocket.png, <<: *g, proxies: [AutoSelect,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others]}
 
-  - name: Auto # > 自动筛选
-    type: url-test
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png
-    lazy: true # 在策略组没有被使用时候，不进行延迟测试
-    <<: *u
+# > 自动筛选
+- {name: AutoSelect, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png, type: url-test, lazy: true, <<: *u}
 
-  - name: Fallback # > 故障转移
-    type: fallback
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png
-    <<: *u
+# > 故障转移
+- {name: Fallback, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png, type: fallback, <<: *u}
 
-  - name: Foreign # > 国外网站
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
-    <<: *f
+# > 国外网站
+- {name: Global, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png, <<: *g}
 
-  - name: Domestic # > 国内网站
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
-    <<: *d
+# > 国内网站
+- {name: Domestic, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png, <<: *d}
 
-  - name: BiliBili # > 哔哩哔哩
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/bilibili.png
-    <<: *d
+# > YouTube
+- {name: YouTube, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/YouTube.png, <<: *g}
 
-  - name: Spotify # > 声田音乐
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Spotify.png
-    <<: *f
+# > NETFLIX
+- {name: NETFLIX, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Netflix.png, <<: *g}
 
-  - name: TikTok # > 海外抖音
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/TikTok.png
-    <<: *f
+# > Disney+
+- {name: Disney+, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Disney%2B.png, <<: *g}
 
-  - name: Telegram # > 电报信息
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Telegram_X.png
-    <<: *f
+# > 哔哩哔哩
+- {name: BiliBili, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/bilibili.png, <<: *d}
 
-  - name: Apple # > 苹果服务
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Apple.png
-    <<: *d
+# > 声田音乐
+- {name: Spotify, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Spotify.png, <<: *g}
 
-  - name: Microsoft # > 微软服务
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Microsoft.png
-    <<: *d
+# > 海外抖音
+- {name: TikTok, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/TikTok.png, <<: *g}
 
-  - name: AdBlock # > 广告拦截
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Advertising.png
-    <<: *f
-    proxies:
-      - REJECT
-      - DIRECT
+# > 电报信息
+- {name: Telegram, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Telegram_X.png, <<: *g}
 
-  - name: HongKong # > 香港节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Hong_Kong.png
-    <<: *u
-    filter: "港|🇭🇰|HK|(?i)Hong"
-    
-  - name: TaiWan # > 台湾节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China.png
-    <<: *u
-    filter: "台|🇨🇳|🇹🇼|湾|TW|(?i)Taiwan"
-         
-  - name: Singapore # > 狮城节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Singapore.png
-    <<: *u
-    filter: "新加坡|坡|狮城|🇸🇬|SG|(?i)Singapore"
-    
-  - name: Japan # > 日本节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Japan.png
-    <<: *u
-    filter: "日|🇯🇵|东京|JP|(?i)Japan"
+# > 苹果服务
+- {name: Apple, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Apple.png, <<: *d}
 
-  - name: America # > 美国节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/United_States.png
-    <<: *u
-    filter: "美|🇺🇲|US|(?i)States|American"
+# > 谷歌服务
+- {name: Google, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Google.png, <<: *g}
 
-  - name: Others # > 其他节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Airport.png
-    <<: *u
-    proxies:
-      - DIRECT
+# > 微软服务
+- {name: Microsoft, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Microsoft.png, <<: *d}
+
+# > 游戏平台
+- {name: Games, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Game.png, <<: *d}
+
+# > 广告拦截
+- {name: AdBlock, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Advertising.png, <<: *g, proxies: [REJECT,DIRECT]}
+
+# > 香港节点
+- {name: HongKong, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Hong_Kong.png, <<: *u, filter: "港|🇭🇰|HK|(?i)Hong"}
+
+# > 台湾节点
+- {name: TaiWan, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China.png, <<: *u, filter: "台|🇨🇳|🇹🇼|湾|TW|(?i)Taiwan"}
+
+# > 狮城节点
+- {name: Singapore, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Singapore.png, <<: *u, filter: "新加坡|坡|狮城|🇸🇬|SG|(?i)Singapore"}
+
+# > 日本节点
+- {name: Japan, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Japan.png, <<: *u, filter: "日|🇯🇵|东京|JP|(?i)Japan"}
+
+# > 美国节点
+- {name: America, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/United_States.png, <<: *u, filter: "美|🇺🇲|US|(?i)States|American"}
+
+# > 其他节点
+- {name: Others, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Airport.png, <<: *u, proxies: [DIRECT]}
+
 
 rules: # >  GeoSite 分流规则引用
   #- GEOSITE,category-ads-all,AdBlock
   # > 👆广告拦截，有误杀，默认关，按需启
   - GEOSITE,private,DIRECT
   - GEOSITE,openai,America
-  - GEOSITE,youtube,Foreign
+  - GEOSITE,youtube,YouTube
+  - GEOSITE,netflix,NETFLIX
+  - GEOSITE,disney,Disney+
   - GEOSITE,bilibili,BiliBili
   - GEOSITE,spotify,Spotify
   - GEOSITE,tiktok,TikTok
   - GEOSITE,telegram,Telegram
-  - GEOSITE,github,Foreign
+  - GEOSITE,github,Global
+  - GEOSITE,bing,Global
+  - GEOSITE,twitter,Global
   - GEOSITE,apple,Apple
+  - GEOSITE,google,Google
   - GEOSITE,microsoft,Microsoft
-  - GEOSITE,geolocation-!cn,Foreign
+  - GEOSITE,epicgames,Games
+  - GEOSITE,sony,Games
+  - GEOSITE,steam,Games
+  - GEOSITE,nintendo,Games
+  - GEOSITE,geolocation-!cn,Global
   - GEOSITE,cn,Domestic
 
   # > GeoIP 国家代码规则
